photo button spacing fix when captions.

--- a/baseline-angular/src/app/components/photos/photos.component.css
+++ b/baseline-angular/src/app/components/photos/photos.component.css
@@ -42,6 +42,10 @@ h3{
 	text-align: center;
 }
 
+.container{
+	margin-bottom: 0px;
+}
+
 .screen{
 	text-align: center;
 	height: 390px;
